# Cloudflare-Firewall-Rules

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  cf.html  cf.py  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml
_modules/: index.html
_modules/cf_rules/: cf.html  error.html  utils.html
_static/css/: custom.css
cf_rules/: __init__.py  cf.py  error.py  utils.py
classes/: Cloudflare.html  Error.html  Utils.html
docs/: Makefile  cf.rst  conf.py  index.rst
docs/_templates/: search.html
docs/classes/: Cloudflare.rst  Error.rst  Utils.rst
docs/examples/: create-rules.rst  list-domains.rst  list-rules.rst  new-rules.rst  update-rules.rst
examples/: all_methods.py  create-rules.html  create_rules.py  list-domains.html  list-rules.html  list_domains.py  list_rules.py  new-rules.html  new_rules.py  update-rules.html  update_rules.py
expressions/: Bad AS.txt  Bad Bots lib.txt  Bad Bots.txt  Bad IPs.txt  Bad URLs.txt  SQL injections.txt  Social + SEO + Preview websites.txt
src/cf_rules/: __init__.py  cf.py  error.py  utils.py
